samples/_failures_safe/1761610055_6bbb78_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_223086d9.c: In function ‘tokenize’:
./samples/SAFE/__tmp_223086d9.c:147:13: error: expected expression at end of input
  147 |             tokens[token_count].value[MAX_TOKEN_LEN -
      |             ^~~~~~
./samples/SAFE/__tmp_223086d9.c:147:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_223086d9.c:147:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_223086d9.c:147:13: error: expected declaration or statement at end of input
